RESOLVED FIXED151129
REGRESSION(r191856): [GTK] SOCK_SEQPACKET no longer used after r191856
https://bugs.webkit.org/show_bug.cgi?id=151129
Summary REGRESSION(r191856): [GTK] SOCK_SEQPACKET no longer used after r191856
Carlos Garcia Campos
Reported 2015-11-10 23:39:37 PST
r191856 unconditionally disabled SOCK_SEQPACKET for GTK port. We should bring it back.
Attachments
Patch (1.22 KB, patch)
2015-11-10 23:41 PST, Carlos Garcia Campos
mrobinson: review+
Carlos Garcia Campos
Comment 1 2015-11-10 23:41:53 PST
Carlos Garcia Campos
Comment 2 2015-11-11 08:19:40 PST
Note You need to log in before you can comment on or make changes to this bug.