REGRESSION(r191856): [GTK] SOCK_SEQPACKET no longer used after r191856 https://bugs.webkit.org/show_bug.cgi?id=151129

Reviewed by Martin Robinson.

r191856 unconditionally disabled SOCK_SEQPACKET for GTK port.

* Platform/IPC/unix/ConnectionUnix.cpp: Use always SOCK_SEQPACKET
when available.

Canonical link: https://commits.webkit.org/169329@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192310 268f45cc-cd09-0410-ab3c-d52691b4dbfc